# src/services/base.response.js
@@ -1,0 +1,6 @@
+// Construye respuesta: { data, pagination, ...otroMetadata }
+function baseResponse(data, pagination = null, metadata = {}) {
+  return { data, pagination, ...metadata };
+}
+
+module.exports = baseResponse;
